--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 :root {
-  --geo: #ECBB5A; /*#C6A972*/
+  --geo: #C6A972; /*#C6A972  #FFC354*/
   --dark-geo: #BF8F6F;
   --anemo: #148EA7;
   --dark-anemo: #153D51;
   --card-background: #EFECE5;
+  --light-red: #E54;
 }
 
 * {
@@ -12,14 +13,20 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
 body {
   font-family: "Nunito", "Times New Roman", monospace;
   background: #F0F0F0;
+  display: flex;
+  flex-direction: column;
 }
 
 .container {
   width: min(90vw, 800px);
-  margin: auto;
+  margin: 0 auto auto;
 }
 
 a {
@@ -55,6 +62,25 @@ h2 {
   font-size: 2rem;
 }
 
+/* button ==============================*/
+.back {
+  background: var(--light-red) url('./assets/fechar.svg') no-repeat center center;
+  width: 50px;
+  height: 50px;
+  border: 4px solid white;
+  border-radius: 50%;
+  position: absolute;
+  box-shadow: 0 4px 4px 0 rgba(0,0,0, .3);
+  cursor: pointer;
+  z-index: 1000;
+  animation: fadeInDown .7s forwards;
+}
+.back:hover {
+  background-color: var(--light-red);
+  transition: .1s;
+}
+
+
 /* ScrollBar ==============================*/
 .xiao.character-guide::-webkit-scrollbar {
   width: 2px;
@@ -67,10 +93,21 @@ h2 {
   border-radius: 4px;
 }
 
+.zhongli.character-guide::-webkit-scrollbar {
+  width: 2px;
+}
 
-/* Head ==============================*/
+.zhongli.character-guide::-webkit-scrollbar-thumb {
+  background: var(--dark-geo);
+  border-left: 4px 0 var(--card-background);
+  border-right: 4px 0 var(--card-background);
+  border-radius: 4px;
+}
+
+
+/* Header ==============================*/
 header {
-  background: linear-gradient(var(--geo), #F0F0F0);
+  background: linear-gradient(var(--anemo), #F0F0F0);
   text-align: center;
   padding: 2rem 0 5rem;
 }
@@ -85,6 +122,15 @@ header h1 {
   color: #0C0A07;
   margin-top: 15px;
   font-weight: bold;
+}
+
+/* Footer ==============================*/
+footer {
+  width: 100%;
+  background: #303036;
+  color: white;
+  text-align: center;
+  margin-top: 1.2rem;
 }
 
 /* Main ==============================*/
@@ -131,9 +177,10 @@ header h1 {
   overflow: hidden;
 }
 
-.zhongli h2 {
+.zhongli h2, .zhongli h3 {
   display: flex;
   justify-content: center;
+  text-align: center;
   color: var(--dark-geo);
   padding-top: 1rem;
 }
@@ -147,7 +194,7 @@ header h1 {
   height: 100%;
 }
 
-.zhongli::after {
+/* .zhongli::after {
   content: "";
   display: block;
   position: absolute;
@@ -158,9 +205,10 @@ header h1 {
   z-index: -1;
   border: 1px solid var(--dark-geo);
   border-radius: 4px;
-}
+} */
 
-.zhongli:hover {
+.zhongli:hover,
+.zhongli.active {
   animation: zhongli-zoom .7s forwards;
 }
 
@@ -208,13 +256,16 @@ header h1 {
   border-radius: 4px;
 } */
 
-.xiao:hover {
+.xiao:hover,
+.xiao.active {
   animation: xiao-zoom .7s forwards;
 }
 
 /* Xiao and Zhongli ==============================*/
 .zhongli:hover .character,
-.xiao:hover .character {
+.xiao:hover .character,
+.zhongli.active .character,
+.xiao.active .character {
   transform: scale(1.1);
   transition: .7s;
 }
@@ -232,6 +283,24 @@ header h1 {
   margin-top: 1rem;
 } */
 
+.character-guide .close-guide {
+  display: none;
+  text-align: center;
+  color: var(--light-red);
+  margin-top: .5rem;
+  font-size: .75rem;
+}
+
+.character-guide .close-guide span::after, 
+.character-guide .close-guide span::before {
+  content: "";
+  display: inline-block;
+  border-top: 1px solid var(--light-red);;
+  width: 30%;
+  margin: 0 1rem;
+  transform: translateY(-.2rem);
+}
+
 .character-guide .talents h2 {
   padding-top: 0;
 }
@@ -243,7 +312,7 @@ header h1 {
   margin-top: 1rem;
 }
 
-.character-guide .talents img {
+.xiao .talents img {
   border: 1px solid var(--anemo);
   border-radius: 50%;
   box-shadow: 0 0 4px var(--anemo);
@@ -251,12 +320,13 @@ header h1 {
   cursor: pointer;
 }
 
-.character-guide .talents img:hover {
+
+.xiao .talents img:hover {
   background: var(--dark-anemo);
   transition: .5s;
 }
 
-.character-guide .talents img.active {
+.xiao .talents img.active {
   background: var(--dark-anemo);
 }
 
@@ -283,18 +353,6 @@ header h1 {
   height: 5rem;
 }
 
-/*ZHONGLI!!!*/
-.geo-element h2::before {
-  content: "";
-  background: url('./assets/geo-icon.png') no-repeat center center;
-  background-size: 100px 100px;
-  position: absolute;
-  width: 100px;
-  height: 100px;
-  margin-top: -30px;
-  z-index: -1;
-}
-
 .qualities {
   padding-top: 0;
 }
@@ -310,13 +368,13 @@ header h1 {
   justify-content: space-around;
 }
 
-.qualities .qualities-selector h2:hover{
+.xiao .qualities .qualities-selector h2:hover{
   background: var(--dark-anemo);
   transition: .5s;
   cursor: pointer;
 }
 
-.qualities .qualities-selector h2 {
+.xiao .qualities .qualities-selector h2 {
   padding: 15px 9px;
   border-radius: 4px;
   margin: 1px;
@@ -324,7 +382,7 @@ header h1 {
   background: var(--anemo);
 }
 
-.qualities .qualities-selector h2.active {
+.xiao .qualities .qualities-selector h2.active {
   background: var(--dark-anemo);
 }
 
@@ -353,14 +411,71 @@ header h1 {
   margin-right: 5px;
 }
 
-.qualities .advantages ul li::before {
+.xiao .qualities .advantages ul li::before {
   content: "";
   background: var(--anemo);
 }
 
 .qualities .disadvantages ul li::before {
   content: "";
-  background: red;
+  background: var(--light-red);
+}
+
+/*ZHONGLI!!!*/
+.zhongli .talents img {
+  border: 1px solid var(--geo);
+  border-radius: 50%;
+  box-shadow: 0 0 4px var(--geo);
+  background: var(--geo);
+  cursor: pointer;
+}
+
+
+.zhongli .talents img:hover {
+  background: var(--dark-geo);
+  transition: .5s;
+}
+
+.zhongli .talents img.active {
+  background: var(--dark-geo);
+}
+
+.zhongli .qualities .qualities-selector h2:hover{
+  background: var(--dark-geo);
+  transition: .5s;
+  cursor: pointer;
+}
+
+.zhongli .qualities .qualities-selector h2 {
+  padding: 15px 9px;
+  border-radius: 4px;
+  margin: 1px;
+  color: #FFF;
+  background: var(--geo);
+}
+
+.zhongli .qualities .qualities-selector h2.active {
+  background: var(--dark-geo);
+}
+
+.zhongli .qualities .advantages ul li::before {
+  content: "";
+  background: var(--dark-geo);
+}
+
+.geo-element {
+  padding-top: 0;
+  margin-bottom: .5rem;
+}
+.geo-element h2::before {
+  content: "";
+  background: url('./assets/geo-icon.png') no-repeat center center;
+  background-size: 100px 100px;
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  margin-top: -30px;
+  z-index: -1;
 }
 
 /* Animations ==============================*/
@@ -459,7 +574,49 @@ header h1 {
   }
 }
 
+/*To do:
+  - No mobile -> Mudar o funcionamento para tirar a classe "close" do card de personagem 
+    e mudar a posição do guide com base na escolha
+  - Alterar o background do header
+  - Colocar um footer
+*/
+
+/*Mobile =================================*/
 @media (max-width: 800px) {
+  .back {
+    display: none;
+  }
+  
+  .character-guide .close-guide {
+    display: block;
+  }
+  
+  .xiao.character-card h2 {
+    display: none;
+  }
+  
+  .xiao .character {
+    background: url('./assets/xiao-wish-face.png') no-repeat center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
+  .zhongli.character-card h2 {
+    display: none;
+  }
+  
+  .zhongli .character {
+    background: url('./assets/zhongli-wish-face.png') no-repeat center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
   .guides {
     display: flex;
     flex-wrap: wrap;
@@ -479,5 +636,32 @@ header h1 {
     font-size: 1.4rem;
     padding: 8px;
   }
+}
 
+@media (max-width: 330px) {
+  body {
+    font-size: .875rem;
+  }
+  header {
+    padding: 2rem 0 3rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+  }
+  .qualities .qualities-selector h2 {
+    padding: .5rem .5rem;
+    font-size: 1.2rem;
+  }
+  .character-guide .close-guide span::after, 
+  .character-guide .close-guide span::before {
+    content: "";
+    width: 27%;
+  }
+  .character-guide img {
+    width: 4rem;
+    height: 4rem;
+  }
 }
