--- a/style.css
+++ b/style.css
@@ -75,11 +75,6 @@ h2 {
   z-index: 1000;
   animation: fadeInDown .7s forwards;
 }
-.back:hover {
-  background-color: var(--light-red);
-  transition: .1s;
-}
-
 
 /* ScrollBar ==============================*/
 .xiao.character-guide::-webkit-scrollbar {
@@ -289,6 +284,7 @@ footer {
   color: var(--light-red);
   margin-top: .5rem;
   font-size: .75rem;
+  animation: fadeInDown .7s forwards;
 }
 
 .character-guide .close-guide span::after, 
@@ -574,23 +570,16 @@ footer {
   }
 }
 
-/*To do:
-  - No mobile -> Mudar o funcionamento para tirar a classe "close" do card de personagem 
-    e mudar a posição do guide com base na escolha
-  - Alterar o background do header
-  - Colocar um footer
-*/
-
 /*Mobile =================================*/
 @media (max-width: 800px) {
   .back {
     display: none;
   }
-  
+
   .character-guide .close-guide {
     display: block;
   }
-  
+
   .xiao.character-card h2 {
     display: none;
   }
@@ -620,7 +609,9 @@ footer {
   .guides {
     display: flex;
     flex-wrap: wrap;
+    margin-top: -2rem;
   }
+  
   .card {
     min-width: 100%;
     height: 100px;
